@@ -143,6 +143,8 @@ traversableInfo = "Traversable info"
 simplifiedTraversableInfo = "Simplified traversable info"
 headlineCookieConf = "Cookie Configuration"
 headlineTimer = "kreXX timer"
+pluginActive = "active"
+pluginInactive = "inactive"
 
 tsEnterText =  "<- Please enter a search text."
 tsTooSmall = "<- Must be bigger than 3 characters."
@@ -299,6 +301,8 @@ traversableInfo = "Traversable Info"
 simplifiedTraversableInfo = "Vereinfachtes Traversable Info"
 headlineCookieConf = "Cookie Konfiguration"
 headlineTimer = "kreXX Timer"
+pluginActive = "aktiviert"
+pluginInactive = "deaktiviert"
 
 tsEnterText =  "<- Bitte geben Sie einen Suchtext ein."
 tsTooSmall = "<- Muss größer sein als 3 Zeichen."
